# SynchroRig

./: .gitignore  Makefile  PROGRESS.md  README.md  REPORT.md  SUMMARY.md  project overview.md  pyproject.toml  technical_details.md
.github/workflows/: check.yml
doc/: aggressive_architecture.md  consultation_prompt_reference.md  context_management_v2.md  context_rag_v2_spec.md  implementers_todo.md  linux_compatibility.md  planner_todo.md  rules_todo.md  skills_todo.md  verifier_todo.md
runs/context-rag/: T1_ignore_runs_worktrees_and_guard.json  T2_init_big_task_utf8_path_and_tests.json  T_gitignore_python_tool_caches.json
synchrorig/: __init__.py  utils.py
synchrorig/run_check/: __init__.py  runner.py
template-cursor/agents/: implementers.md  orchestrator.md  planner.md  verifier.md
template-cursor/rules/: completion_guard.mdc  granularity.mdc  memory.mdc  orchestration.mdc  roles.mdc  tdd.mdc
template-cursor/scripts/: init-big-task.ps1  init-big-task.sh  log-event.ps1  progress_tools.py  tail-progress.ps1  tail-summary.ps1  tail_file.py  upsert-task.ps1
template-cursor/skills/compression/: SKILL.md
tests/: conftest.py  test_candidate_preflight.py  test_context_rag_progressive_disclosure.py  test_gitignore_runs_worktrees.py  test_init_big_task_utf8_path.py  test_parallel_isolation_contract_docs.py  test_progress_header.py  test_progress_tools_cli.py  test_report_generation.py  test_rules_context_rag_optional.py  test_run_check_contract.py  test_run_check_runner.py  test_utf8_rule.py  test_utils.py  test_worktree_script.py
x.com/: 1.md  2.md  3.md
(+38 files in other folders)
