[project]
name = "synchrorig"
version = "0.1.0"
description = "Cursor subagents workflow template (Planner -> Implementers -> Verifier)."
readme = "project overview.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv --tb=short"

